--- a/index.html
+++ b/index.html
@@ -2,42 +2,68 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles.css">
     <title>Document</title>
 </head>
 <body>
-</body>
-    <div class="sec1">
-        <div class="header">
-            <div class="logo">Header logo</div>
-            <ul>
-                <li><a href="./index.html">Header link one</a></li>
-                <li><a>Header link two</a></li>
-                <li><a>Header link three</a></li>
-            </ul>
-        </div>
-        <div class="top">
-            <div class="sec11">
-                <h1>
-                    This Website is Awesome
-                </h1>
-                <p>
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequuntur modi, beatae amet optio officiis iste, architecto minus eveniet quibusdam tempore animi eaque deserunt libero veniam dolore numquam temporibus odio quia?
-                </p>
-                <button>
-                    Sign up
-                </button>
-            </div>
-            <div class="img">
-                this is a placeholder for an image
-            </div>
-        </div>
+    <div class="header">
+        <div>Header Logo</div>
+        <ul>
+            <li><a href="./index.html">header link one</a></li>
+            <li><a href="./index.html">header link two</a></li>
+            <li><a href="./index.html">header link three</a></li>
+        </ul>
     </div>
-    <div class="sec2">
-        
-    </div>
+    <div>
+        <h1>
+            This Website is Awesome
+        </h1>
+        <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illum, quasi quae. Distinctio molestias debitis cumque non illum magni, a iusto ea eaque quos tempore odit? Minus unde saepe molestias quod.
+        </p>
+        <button>
+            Sign up
+        </button>
+        <!-- <img src="https://via.placeholder.com/150" alt="Placeholder Image"> -->
+        <div> This is placeholder for an image</div>
 
+    </div>
+    <div>
+        <h2>Some Random Information</h2>
+        <ul>
+            <li>
+                <div> box</div>
+                <p>This is some subtext under an illustaration or image</p>
+            </li>
+            <li>
+                <div> box</div>
+                <p>This is some subtext under an illustaration or image</p>
+            </li>
+            <li>
+                <div> box</div>
+                <p>This is some subtext under an illustaration or image</p>
+            </li>
+            <li>
+                <div> box</div>
+                <p>This is some subtext under an illustaration or image</p>
+            </li>
+        </ul>
+    </div>
+    <div>
+        <p><i>This is an inspiring quote or a testimonial from a customer. Maybe it's just filling up space, or maybe people will acutally read it. Who knows? All I know is that it looks nice</i></p>
+        <p><strong>-Thor, God of Thunder</strong></p>
+
+    </div>
+    <div>
+        <div>
+            <h4>Call to action! its time!</h4>
+            <p>Sign up for our product by clicking that button right over there! </p>
+        </div>
+        <button>Sign up</button>
+    </div>
+    <div>
+        Copyright <span>&copy</span> The odin Project 2021
+    </div>
 </body>
 </html>
