--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="header">
+    <div class="upper" id="header">
         <div>Header Logo</div>
         <ul>
             <li><a href="./index.html">header link one</a></li>
@@ -15,7 +15,7 @@
             <li><a href="./index.html">header link three</a></li>
         </ul>
     </div>
-    <div>
+    <div class="upper">
         <h1>
             This Website is Awesome
         </h1>
@@ -29,7 +29,7 @@
         <div> This is placeholder for an image</div>
 
     </div>
-    <div>
+    <div class="upper">
         <h2>Some Random Information</h2>
         <ul>
             <li>
@@ -50,19 +50,19 @@
             </li>
         </ul>
     </div>
-    <div>
+    <div class="upper">
         <p><i>This is an inspiring quote or a testimonial from a customer. Maybe it's just filling up space, or maybe people will acutally read it. Who knows? All I know is that it looks nice</i></p>
         <p><strong>-Thor, God of Thunder</strong></p>
 
     </div>
-    <div>
+    <div class="upper">
         <div>
             <h4>Call to action! its time!</h4>
             <p>Sign up for our product by clicking that button right over there! </p>
         </div>
         <button>Sign up</button>
     </div>
-    <div>
+    <div class="upper">
         Copyright <span>&copy</span> The odin Project 2021
     </div>
 </body>
