--- a/index.html
+++ b/index.html
@@ -8,25 +8,29 @@
 </head>
 <body>
     <div class="upper" id="header">
-        <div>Header Logo</div>
+        <div id="logo">Header Logo</div>
         <ul>
             <li><a href="./index.html">header link one</a></li>
             <li><a href="./index.html">header link two</a></li>
             <li><a href="./index.html">header link three</a></li>
         </ul>
     </div>
-    <div class="upper">
-        <h1>
-            This Website is Awesome
-        </h1>
-        <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illum, quasi quae. Distinctio molestias debitis cumque non illum magni, a iusto ea eaque quos tempore odit? Minus unde saepe molestias quod.
-        </p>
-        <button>
-            Sign up
-        </button>
+    <div class="upper" id="sec1">
+        <div class="left-sec">
+            <h1>
+                This Website is Awesome
+            </h1>
+            <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illum, quasi quae. Distinctio molestias debitis cumque non illum magni, a iusto ea eaque quos tempore odit? Minus unde saepe molestias quod.
+            </p>
+            <button>
+                Sign up
+            </button>
+        </div>
         <!-- <img src="https://via.placeholder.com/150" alt="Placeholder Image"> -->
-        <div> This is placeholder for an image</div>
+        <div class="right-sec">
+            <div> This is placeholder for an image</div>
+        </div>
 
     </div>
     <div class="upper">
