--- a/index.html
+++ b/index.html
@@ -33,28 +33,28 @@
         </div>
 
     </div>
-    <div class="upper">
+    <div class="upper" id="sec2">
         <h2>Some Random Information</h2>
-        <ul>
-            <li>
-                <div> box</div>
+        <ul id="boxes">
+            <li class="box-container">
+                <div class="box"></div>
                 <p>This is some subtext under an illustaration or image</p>
             </li>
-            <li>
-                <div> box</div>
+            <li class="box-container">
+                <div class="box"></div>
                 <p>This is some subtext under an illustaration or image</p>
             </li>
-            <li>
-                <div> box</div>
+            <li class="box-container">
+                <div class="box"></div>
                 <p>This is some subtext under an illustaration or image</p>
             </li>
-            <li>
-                <div> box</div>
+            <li class="box-container">
+                <div class="box"></div>
                 <p>This is some subtext under an illustaration or image</p>
             </li>
         </ul>
     </div>
-    <div class="upper">
+    <div class="upper" id="sec3">
         <p><i>This is an inspiring quote or a testimonial from a customer. Maybe it's just filling up space, or maybe people will acutally read it. Who knows? All I know is that it looks nice</i></p>
         <p><strong>-Thor, God of Thunder</strong></p>
 
