--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </div>
     <div class="upper" id="sec3">
         <p><i>This is an inspiring quote or a testimonial from a customer. Maybe it's just filling up space, or maybe people will acutally read it. Who knows? All I know is that it looks nice</i></p>
-        <p><strong>-Thor, God of Thunder</strong></p>
+        <p class="author"><strong>-Thor, God of Thunder</strong></p>
 
     </div>
     <div class="upper">
