--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         </div>
         <button>Sign up</button>
     </div>
-    <div class="upper">
+    <div class="upper" id="footer">
         Copyright <span>&copy</span> The odin Project 2021
     </div>
 </body>
