--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
         <p class="author"><strong>-Thor, God of Thunder</strong></p>
 
     </div>
-    <div class="upper">
+    <div class="upper" id="sec4">
         <div>
-            <h4>Call to action! its time!</h4>
+            <h3>Call to action! its time!</h3>
             <p>Sign up for our product by clicking that button right over there! </p>
         </div>
         <button>Sign up</button>
